k8s/example_packman/k3s-local-k8s-cluster-deploy/yaml configs/mongo-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pacman

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: pacman
  labels:
    name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: pacman
  labels:
    name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo
  template:
    metadata:
      labels:
        name: mongo
    spec:
      volumes:
        - name: mongo-db
          persistentVolumeClaim:
            claimName: mongo-storage
      containers:
        - name: mongo
          image: mongo
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: mongo-db
              mountPath: /mnt/data/db
