k8s/example_packman/k3s-local-k8s-cluster-deploy/yaml configs/packman-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pacman
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman  # Name of your Ingress resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pacman.paxel.ca  # Replace with your domain name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pac-man  # Name of your NGINX Service
                port:
                  number: 8080
  tls:  # TLS configuration
    - hosts:
        - pacman.paxel.ca
      secretName: pacman.paxel.ca-tls  # Secret containing the TLS certificate


---

apiVersion: v1
kind: Service
metadata:
  name: pac-man
  namespace: pacman
  labels:
    name: pac-man
spec:
  selector:
    name: pac-man
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pac-man
  namespace: pacman
  labels:
    name: pac-man
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pac-man
  template:
    metadata:
      labels:
        name: pac-man
    spec:
      containers:
        - name: pac-man
          image: docker.io/jessehoch/pacman-nodejs-app:latest
          ports:
            - name: http-server
              containerPort: 8080
